# c0Deck

./: .gitignore  CMakeLists.txt  vcpkg.json
client/: CMakeLists.txt  actions.cpp  actions.h  application_entry.cpp  application_entry.h  build_config.h  c0deck.cpp  client.cpp  client.h  client_data.cpp  client_data.h  client_types.h  components.h  instance.cpp  instance.h  resources.qrc  utils.h
client/controls/: animatedbuttonsview.cpp  animatedbuttonsview.h  audiostreamcontrol.cpp  audiostreamcontrol.h  componentcreator.h  webcontrol.h
client/qml/: AnimatedBackground.qml  AnimatedButton.qml  AudioStream.qml  AudioStreamControl.qml  ButtonView.qml  MainWindow.qml  WebControl.qml
lib/: CMakeLists.txt  components.h  config.cpp  config.h  instance.h  json_utils.h
lib/grpc/: service.proto
res/: base-config.json  base-server-config.json
server/: CMakeLists.txt  audiocontrol.cpp  audiocontrol.h  c0deckserver.cpp  commands.cpp  commands.h  pulsestreams.cpp  pulsestreams.h  serveractions.cpp  serveractions.h  serverconfig.h
src/: CMakeLists.txt  animatedbuttonsview.h  application_entry.cpp  build_config.h  c0deck.cpp  config.cpp  config.h  instance.cpp  instance.h  mainwindow.cpp  mainwindow.h  resources.qrc
src/controls/: animatedbuttonsview.cpp  animatedbuttonsview.h  componentcreator.cpp  componentcreator.h  webcontrol.cpp  webcontrol.h
src/qml/: AnimatedButton.qml  ButtonView.qml  CustomTabButton.qml  MainWindow.qml  WebControl.qml
tests/: CMakeLists.txt  init.cpp
